added search for apple to spotify

--- a/frontend/root.html
+++ b/frontend/root.html
@@ -8,7 +8,7 @@
             <h1 class="heading">Playlist Converter</h1>
         </div>
         <div class="controls">
-            <input id="playlistUrl" class="playlistTextBox" type="text" placeholder="Enter a playlist url"></input>
+            <input id="songUrl" class="songTextBox" type="text" placeholder="Enter a song url"></input>
             <div class="selectControlsContainer">
                 <div class="selectControls">
                     <label for="sourceService">Source service</label>
@@ -17,9 +17,9 @@
                     <select name="Destination Service" class="serviceSelect" id="destinationService"></select>
                 </div>
             </div>
-            <button id=convertPlaylistButton class="convertButton" type="button">Convert playlist!</button>
-            <input id="newPlaylistUrl" class="newPlaylistTextBox" type="text"
-                placeholder="Your new playlist url will be here" readonly></input>
+            <button id=convertSongButton class="convertButton" type="button">Convert song!</button>
+            <input id="newSongUrl" class="newSongTextBox" type="text"
+                placeholder="Your new song url will be here" readonly></input>
         </div>
     </div>
     <script type="module" src="bundle.js"></script>
