deploy almost working

--- a/frontend/root.html
+++ b/frontend/root.html
@@ -11,6 +11,8 @@
             <input id="songUrl" class="songTextBox" type="text" placeholder="Enter a song url"></input>
             <div class="selectControlsContainer">
                 <div class="selectControls">
+                    <label for="urlType">Url type</label>
+                    <select name="Url type" class="urlType" id="urlType"></select>
                     <label for="sourceService">Source service</label>
                     <select name="Source Service" class="serviceSelect" id="sourceService"></select>
                     <label for="destinationService">Destination service</label>
