--- a/frontend/root.html
+++ b/frontend/root.html
@@ -8,7 +8,6 @@
             <h1 class="heading">Playlist Converter</h1>
         </div>
         <div class="controls">
-            <input id="songUrl" class="songTextBox" type="text" placeholder="Enter a song url"></input>
             <div class="selectControlsContainer">
                 <div class="selectControls">
                     <label for="urlType">Url type</label>
@@ -20,8 +19,12 @@
                 </div>
             </div>
             <button id=convertSongButton class="convertButton" type="button">Convert song!</button>
-            <input id="newSongUrl" class="newSongTextBox" type="text"
-                placeholder="Your new song url will be here" readonly></input>
+            <div class="urlsContainer">
+                <div class="urlTextboxes">
+                    <input id="songUrl" class="songTextBox" type="text" placeholder="Enter a song url"></input>
+                    <input id="newSongUrl" class="newSongTextBox" type="text" placeholder="Your new song url will be here" readonly></input>
+                </div>
+            </div>
         </div>
     </div>
     <script type="module" src="bundle.js"></script>
