--- a/frontend/root.html
+++ b/frontend/root.html
@@ -2,6 +2,7 @@
     <script src="https://cdn.jsdelivr.net/npm/superagent"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsrsasign/8.0.20/jsrsasign-all-min.js"></script>
     <script src="https://js-cdn.music.apple.com/musickit/v1/musickit.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css" type="text/css">
     <div>
         <div>
