refactored homepage into class

--- a/frontend/root.html
+++ b/frontend/root.html
@@ -21,7 +21,7 @@
             <button id=convertSongButton class="convertButton" type="button">Convert song!</button>
             <div class="urlsContainer">
                 <div class="urlTextboxes">
-                    <input id="songUrl" class="songTextBox" type="text" placeholder="Enter a song url"></input>
+                    <input id="url" class="songTextBox" type="text" placeholder="Enter a song or playlist url"></input>
                     <input id="newSongUrl" class="newSongTextBox" type="text" placeholder="Your new song url will be here" readonly></input>
                 </div>
             </div>
