--- a/frontend/root.html
+++ b/frontend/root.html
@@ -13,8 +13,8 @@
                 <div class="selectControls">
                     <label for="urlType">Url type</label>
                     <select name="Url type" class="urlType" id="urlType"></select>
-                    <label for="sourceService">Source service</label>
-                    <select name="Source Service" class="serviceSelect" id="sourceService"></select>
+                    <!-- label for="sourceService">Source service</label -->
+                    <!-- select name="Source Service" class="serviceSelect" id="sourceService"></select -->
                     <label for="destinationService">Destination service</label>
                     <select name="Destination Service" class="serviceSelect" id="destinationService"></select>
                 </div>
@@ -23,7 +23,7 @@
             <div class="urlsContainer">
                 <div class="urlTextboxes">
                     <input id="url" class="songTextBox" type="text" placeholder="Enter a song or playlist url"></input>
-                    <input id="newSongUrl" class="newSongTextBox" type="text" placeholder="Your new song url will be here" readonly></input>
+                    <!-- input id="newSongUrl" class="newSongTextBox" type="text" placeholder="Your new song url will be here" readonly></input -->
                 </div>
             </div>
         </div>
