--- a/frontend/root.html
+++ b/frontend/root.html
@@ -23,7 +23,7 @@
             <div class="urlsContainer">
                 <div class="urlTextboxes">
                     <input id="url" class="songTextBox" type="text" placeholder="Enter a song or playlist url"></input>
-                    <!-- input id="newSongUrl" class="newSongTextBox" type="text" placeholder="Your new song url will be here" readonly></input -->
+                    <input id="newSongUrl" class="newPlaylistTextBox" type="text" placeholder="Your new song url will be here" readonly></input>
                 </div>
             </div>
         </div>
