--- a/frontend/root.html
+++ b/frontend/root.html
@@ -34,7 +34,9 @@
                 <div class="loader" id="loader"></div>
                 <input id="newSongUrl" type="text" placeholder="Your new url will be here" readonly></input>
             </div>
-            <!-- div class="loader"></div -->
+        </div>
+        <div class="descriptionText">
+            <p id="descriptionText">Hello,world</p>
         </div>
     </div>
     <script type="module" src="bundle.js"></script>
