added url validation

--- a/frontend/root.html
+++ b/frontend/root.html
@@ -29,6 +29,9 @@
             <button id=convertSongButton class="convertButton" type="button">Convert!</button>
             <div class="inputUrlTextBox">
                 <input id="url" type="text" placeholder="Enter a playlist url"></input>
+                <label id="urlSublabel" class="urlSublabelValidation" for="url">
+                    Hello, world
+                 </label>
             </div>
             <div class="resultUrlTextBox">
                 <div class="loader" id="loader"></div>
