centered icon with text using flex box

--- a/frontend/root.html
+++ b/frontend/root.html
@@ -7,9 +7,8 @@
     <div>
         <header>
             <nav class="navBar">
+                <img loading="lazy" src="https://playlistconverter.blob.core.windows.net/icons/001-playlist.png" alt="" width="30" height="30">
                 <a class="navbar-brand">
-                    <img loading="lazy" src="https://uploads.commoninja.com/searchengine/wordpress/svg-favicon.png" alt="" width="30" height="30">
-    
                     Playlist Converter
                 </a>
             </nav>
